<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?actionBarSize"
    android:fillViewport="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.jp.pokemon.activities.DetailActivity"
        tools:showIn="@layout/activity_detail">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="16dp"
            android:background="@drawable/round_white">

            <ImageView
                android:id="@+id/detail_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_margin="16dp"
            android:background="@drawable/round_white"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/detail_number"

                    android:textColor="@color/secondaryText"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/detail_text_number"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/primaryText"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/detail_location"
                    android:textColor="@color/secondaryText"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/detail_text_location"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/primaryText"
                    android:textSize="16dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_margin="16dp"
            android:background="@drawable/round_white"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/detail_height"
                    android:textColor="@color/secondaryText"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/detail_text_height"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/primaryText"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/detail_weight"
                    android:textColor="@color/secondaryText"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/detail_text_weight"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/primaryText"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/detail_type"
                    android:textColor="@color/secondaryText"
                    android:textSize="14dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/detail_text_type1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"

                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/primaryText"
                        android:textSize="16dp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/detail_text_type2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"

                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/primaryText"
                        android:textSize="16dp"
                        android:visibility="gone" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_margin="16dp"
            android:background="@drawable/round_white"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"

                    android:text="@string/detail_hp"
                    android:textColor="@color/secondaryText"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/detail_text_hp"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/primaryText"
                    android:textSize="16dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"

                    android:text="@string/detail_attack"
                    android:textColor="@color/secondaryText"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/detail_text_attack"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/primaryText"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"

                    android:text="@string/detail_defend"
                    android:textColor="@color/secondaryText"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/detail_text_defend"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/primaryText"
                    android:textSize="16dp" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_margin="16dp"
            android:background="@drawable/round_white"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"

                    android:text="@string/detail_speed"
                    android:textColor="@color/secondaryText"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/detail_text_speed"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/primaryText"
                    android:textSize="16dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/detail_sattack"
                    android:textColor="@color/secondaryText"

                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/detail_text_sattack"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/primaryText"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"

                    android:text="@string/detail_sdefend"
                    android:textColor="@color/secondaryText"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/detail_text_sdefend"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/primaryText"
                    android:textSize="16dp" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_margin="16dp"
            android:background="@drawable/round_white"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/detail_skill"
                    android:textColor="@color/secondaryText"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/detail_text_skill1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/primaryText"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/detail_hiddenskill"
                    android:textColor="@color/secondaryText"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/detail_text_skill2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/primaryText"
                    android:textSize="16dp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>